--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -4,6 +4,8 @@ name: production_node_workflow
 
 on:
   workflow_dispatch:
+  pull_request:
+    types: [opened, reopened]
   push:
     branches: [ main ]
 
