--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -8,6 +8,11 @@ on:
     types: [opened, reopened]
   push:
     branches: [ main ]
+permissions:
+  # All other permissions are set to none
+  checks: write
+  contents: read
+  pull-requests: write    
 
 jobs:      
   test_response_headers:
