--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const allSecurityHeaderPresent = `{{ steps.security-check.outputs.rating }}`=== "success"
+            const allSecurityHeaderPresent = `{{ steps.security-check.outputs.result.rating }}`=== "success"
             const msg = allSecurityHeaderPresent ? 'All security header present 🚀' : 'Security Header missing, please check action form more details '
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
