--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -40,7 +40,10 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: msg
+              body: `
+                ``` diff
+                ${msg}
+              `
             })
 
         # with:
