--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -40,10 +40,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `
-                ``` diff
-                ${msg}
-              `
+              body: msg
             })
 
         # with:
