--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -40,12 +40,11 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "
+              body: 
                 ```diff
                   + this text is highlighted in green
                   - this text is highlighted in red
                 ```
-              "
             })
 
         # with:
