--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -40,8 +40,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "```diff
-                + this text is highlighted in green
-                - this text is highlighted in red
-                ```"
+              body: 'hello world'
             })
