--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -35,18 +35,7 @@ jobs:
           script: |
             console.log('the output is', "${{ steps.security-check.outputs.rating }}")
             const allSecurityHeaderPresent = "${{ steps.security-check.outputs.rating }}" ===  "success"
-            const msg = allSecurityHeaderPresent ? '
-             ```diff
-              + All security header present 🚀
-              ```
-            '
-             
-              :
-            '
-            ``` diff 
-              - Security Header missing, please check action for more details
-             ```
-            '
+            const msg = allSecurityHeaderPresent ? All security header present 🚀 : Security Header missing, please check action for more details
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
