--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -35,19 +35,12 @@ jobs:
           script: |
             console.log('the output is', "${{ steps.security-check.outputs.rating }}")
             const allSecurityHeaderPresent = "${{ steps.security-check.outputs.rating }}" ===  "success"
-            const msg = allSecurityHeaderPresent ? + All security header present 🚀  : - Security Header missing, please check action for more details
+            const msg = allSecurityHeaderPresent ? All security header present 🚀  :  Security Header missing, please check action for more details
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "
-              
-              `
-                ``` diff
-                ${msg}
-                ```
-              `
-              
+              body: msg
               "
             })
 
