--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,3 +14,4 @@ jobs:
       uses: foo-software/lighthouse-check-action@master
       with:
         urls: 'https://sandbox-web.lazypay.in'
+        gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
