--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,7 +14,7 @@ jobs:
       uses: foo-software/lighthouse-check-action@v10.0.0
       id: lighthouseCheck
       with:
-        urls: 'google.com'
+        urls: 'https://google.com'
         # urls: 'https://sandbox-web.lazypay.in'
         gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
         device: mobile
