--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -16,6 +16,7 @@ jobs:
       with:
         urls: 'https://google.com'
         # urls: 'https://sandbox-web.lazypay.in'
+        prCommentEnabled: true
         gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
         device: mobile
 
