--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -3,7 +3,11 @@ on:
   pull_request:
     types: [opened, reopened]
     branches: [ main ]
-
+    
+permissions:
+  contents: 'read'
+  id-token: 'write'
+  issues: 'write' #__This fixed the HttpError: Resource not accessible by integration
 
 jobs:
   lighthouse-mobile:
