--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,6 +20,8 @@ jobs:
     - uses: actions/checkout@master
     - name: Lighthouse
       uses: foo-software/lighthouse-check-action@v10.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
       id: lighthouseCheck
       with:
         urls: 'https://google.com'
@@ -27,7 +29,7 @@ jobs:
         prCommentEnabled: true
         prCommentSaveOld: true
         gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-        commentUrl: https://api.github.com/repos/basantPayU/tryout/commits/88120476f60e8be64700d2e6a3544f63d5cadc7f/comments
+        # commentUrl: https://api.github.com/repos/basantPayU/tryout/commits/88120476f60e8be64700d2e6a3544f63d5cadc7f/comments
         # commentUrl: https://api.github.com/repos/:owner/:repo/commits/:commit_sha/comments
         # https://github.com/basantPayU/tryout/pull/9#issuecomment-1553503682
         device: mobile
