--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -30,7 +30,7 @@ jobs:
         prCommentSaveOld: true
         sha: ${{ github.sha }}
         gitHubAccessToken: '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'
-        outputDirectory: ../../../tmp/artifacts
+        outputDirectory: ${{ github.workspace }}/tmp/artifacts
         # gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
         # commentUrl: https://api.github.com/repos/basantPayU/tryout/commits/88120476f60e8be64700d2e6a3544f63d5cadc7f/comments
         # commentUrl: https://api.github.com/repos/:owner/:repo/commits/:commit_sha/comments
