--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,6 +18,7 @@ jobs:
         echo "$GITHUB_CONTEXT.github.repository"
         echo "github.job_workflow_sha"
     - uses: actions/checkout@master
+    - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
     - name: Lighthouse
       uses: foo-software/lighthouse-check-action@master
       env:
@@ -25,17 +26,19 @@ jobs:
       id: lighthouseCheck
       with:
         outputDirectory: ${{ github.workspace }}/tmp/artifacts
-        urls: 'https://google.com'
-        # urls: 'https://sandbox-web.lazypay.in'
+        # urls: 'https://google.com'
+        urls: 'https://sandbox-web.lazypay.in'
         prCommentEnabled: true
         prCommentSaveOld: true
         sha: ${{ github.sha }}
+        gitAuthor: ${{ github.actor }}
+        gitBranch: ${{ github.ref }}
         gitHubAccessToken: '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'
         # gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
         # commentUrl: https://api.github.com/repos/basantPayU/tryout/commits/88120476f60e8be64700d2e6a3544f63d5cadc7f/comments
         # commentUrl: https://api.github.com/repos/:owner/:repo/commits/:commit_sha/comments
         # https://github.com/basantPayU/tryout/pull/9#issuecomment-1553503682
-        device: mobile
+        # device: mobile
 
     - name: Verify Lighthouse Check results
       uses: foo-software/lighthouse-check-status-action@master
