--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,76 +1,96 @@
-name: Lighthouse
-on:
-  pull_request:
-    types: [opened, reopened]
-    branches: [ main ]
-
-permissions:
-  issues: 'write' #__This fixed the HttpError: Resource not accessible by integration
+name: Lighthouse Check
+on: [pull_request]
 
 jobs:
-  lighthouse-mobile:
+  lighthouse-check:
     runs-on: ubuntu-latest
     steps:
-    - name: Dump Github Context  
-      run: |
-        echo "$SECRETS.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN"
-        echo "$GITHUB_CONTEXT"
-        echo "$GITHUB_CONTEXT.github.repository"
-        echo "github.job_workflow_sha"
     - uses: actions/checkout@master
-    - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
-    - name: Lighthouse
+    - run: mkdir /tmp/artifacts
+    - name: Run Lighthouse
       uses: foo-software/lighthouse-check-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-      id: lighthouseCheck
       with:
-        outputDirectory: ${{ github.workspace }}/tmp/artifacts
-        urls: 'https://google.com'
-        # urls: 'https://sandbox-web.lazypay.in'
-        prCommentEnabled: true
-        prCommentSaveOld: true
-        sha: ${{ github.sha }}
-        gitAuthor: ${{ github.actor }}
-        gitBranch: ${{ github.ref }}
-        # gitHubAccessToken: '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'
-        gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-        # commentUrl: https://api.github.com/repos/basantPayU/tryout/commits/88120476f60e8be64700d2e6a3544f63d5cadc7f/comments
-        # commentUrl: https://api.github.com/repos/:owner/:repo/commits/:commit_sha/comments
-        # https://github.com/basantPayU/tryout/pull/9#issuecomment-1553503682
-        # device: mobile
+        outputDirectory: /tmp/artifacts
+        urls: 'https://www.foo.software'
+    - name: Upload artifacts
+      uses: actions/upload-artifact@master
+      with:
+        name: Lighthouse reports
+        path: /tmp/artifacts
 
-    - name: Verify Lighthouse Check results
-      uses: foo-software/lighthouse-check-status-action@master
-      with:
-        lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
-        minAccessibilityScore: "50"
-        minBestPracticesScore: "50"
-        minPerformanceScore: "20"
-        minProgressiveWebAppScore: "50"
-        minSeoScore: "50"  
-        # - name: Lighthouse Check
-        # uses: 
+
+
+
+# name: Lighthouse
+# on:
+#   pull_request:
+#     types: [opened, reopened]
+#     branches: [ main ]
+
+# permissions:
+#   issues: 'write' #__This fixed the HttpError: Resource not accessible by integration
+
+# jobs:
+#   lighthouse-mobile:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Dump Github Context  
+#       run: |
+#         echo "$SECRETS.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN"
+#         echo "$GITHUB_CONTEXT"
+#         echo "$GITHUB_CONTEXT.github.repository"
+#         echo "github.job_workflow_sha"
+#     - uses: actions/checkout@master
+#     - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
+#     - name: Lighthouse
+#       uses: foo-software/lighthouse-check-action@master
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
+#       id: lighthouseCheck
+#       with:
+#         outputDirectory: ${{ github.workspace }}/tmp/artifacts
+#         urls: 'https://google.com'
+#         # urls: 'https://sandbox-web.lazypay.in'
+#         prCommentEnabled: true
+#         prCommentSaveOld: true
+#         sha: ${{ github.sha }}
+#         gitAuthor: ${{ github.actor }}
+#         gitBranch: ${{ github.ref }}
+#         gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
+#         # commentUrl: https://api.github.com/repos/basantPayU/tryout/commits/88120476f60e8be64700d2e6a3544f63d5cadc7f/comments
+#         device: mobile
+
+#     - name: Verify Lighthouse Check results
+#       uses: foo-software/lighthouse-check-status-action@master
+#       with:
+#         lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+#         minAccessibilityScore: "50"
+#         minBestPracticesScore: "50"
+#         minPerformanceScore: "20"
+#         minProgressiveWebAppScore: "50"
+#         minSeoScore: "50"  
+#         # - name: Lighthouse Check
+#         # uses: 
       
-  # lighthouse-desktop:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@master
-  #   - name: Lighthouse
-  #     uses: foo-software/lighthouse-check-action@master
-  #     id: lighthouseCheck
-  #     with:
-  #       urls: 'https://sandbox-web.lazypay.in'
-  #       accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-  #       device: desktop
-  #       # slackWebhookUrl: ${{ secrets.LIGHTHOUSE_CHECK_WEBHOOK_URL }}
+#   # lighthouse-desktop:
+#   #   runs-on: ubuntu-latest
+#   #   steps:
+#   #   - uses: actions/checkout@master
+#   #   - name: Lighthouse
+#   #     uses: foo-software/lighthouse-check-action@master
+#   #     id: lighthouseCheck
+#   #     with:
+#   #       urls: 'https://sandbox-web.lazypay.in'
+#   #       accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
+#   #       device: desktop
+#   #       # slackWebhookUrl: ${{ secrets.LIGHTHOUSE_CHECK_WEBHOOK_URL }}
 
-  #   - name: Verify Lighthouse Check results
-  #     uses: foo-software/lighthouse-check-status-action@master
-  #     with:
-  #       lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
-  #       minAccessibilityScore: "50"
-  #       minBestPracticesScore: "50"
-  #       minPerformanceScore: "20"
-  #       minProgressiveWebAppScore: "50"
-  #       minSeoScore: "50"          
+#   #   - name: Verify Lighthouse Check results
+#   #     uses: foo-software/lighthouse-check-status-action@master
+#   #     with:
+#   #       lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+#   #       minAccessibilityScore: "50"
+#   #       minBestPracticesScore: "50"
+#   #       minPerformanceScore: "20"
+#   #       minProgressiveWebAppScore: "50"
+#   #       minSeoScore: "50"          
