--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -10,6 +10,8 @@ jobs:
     - name: Run Lighthouse
       uses: foo-software/lighthouse-check-action@master
       with:
+        prCommentEnabled: true
+        accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
         outputDirectory: /tmp/artifacts
         urls: 'https://www.foo.software'
     - name: Upload artifacts
