--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,6 +1,9 @@
 name: Lighthouse Check
 on: [pull_request]
 
+permissions:
+  pull-requests: write #__This fixed the HttpError: Resource not accessible by integration
+
 jobs:
   lighthouse-check:
     runs-on: ubuntu-latest
