--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,6 +6,7 @@ permissions:
 
 jobs:
   lighthouse-check:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
