--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -10,7 +10,8 @@ on:
 
 jobs:
   lighthouse-check:
-    # permissions: write-all
+    if: ${{ github.event_name == 'pull_request' }}
+    
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
