--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -18,7 +18,8 @@ jobs:
 
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEB_HOOK_URL }} #required to slack post
-
+    # outputs:
+    #   rating: ${{ steps.security-check.outputs.rating }}
     steps:
       - name: response-header-security-check
         id: security-check
@@ -27,6 +28,8 @@ jobs:
         # uses: paysense-india-services/LPWEB-SecurityHeaderAction@main
         with:
           url: 'https://sbox-securepsweb.paysense.io/mobile/terms'
+        # run: |
+        #   echo "rating=$rating" >> $GITHUB_OUTPUT  
       - name: 'Comment on PR'
         id: security-check-comment
         uses: actions/github-script@v6
@@ -42,3 +45,12 @@ jobs:
               repo: context.repo.repo,
               body: msg
             })
+      - name: "check"
+        id: check
+        run: |
+          code=1
+          if [[ ${{ steps.security-check.outputs.rating }} == "success" ]]; then
+            code=0
+          fi
+          exit code
+#check the output of steps.security-check and pass/fail the action
