--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -7,29 +7,29 @@ on:
     branches: [ main ]
 jobs:
   scan-secuity-headers:
-    uses: paysense-india-services/reusable-workflow/.github/workflows/web-vitals-scan.yml@feature/TCWEB-1382
+    uses: https://github.com/basantPayU/security-headers-check-github-action/blob/main/.github/workflows/web-vitals.yml
     # uses: paysense-india-services/reusable-workflow/.github/workflows/security-review-cron.yml@main
     with:
       url: https://sandbox-web.lazypay.in/
     secrets: inherit
 
-  add-lighthouse-badges:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+  # add-lighthouse-badges:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 14
 
-      - name: Install dependencies
-        run: npm install
+  #     - name: Install dependencies
+  #       run: npm install
 
-      - name: Run NPM Command
-        run: npm -g lighthouse-badges
+  #     - name: Run NPM Command
+  #       run: npm -g lighthouse-badges
         
-      - name: Run Lighthouse Badges
-        run: npx lighthouse-badges --url https://sandbox-web.lazypay.in/ -o lighthouse_test_results
+  #     - name: Run Lighthouse Badges
+  #       run: npx lighthouse-badges --url https://sandbox-web.lazypay.in/ -o lighthouse_test_results
         
