--- a/.github/workflows/badger.yml
+++ b/.github/workflows/badger.yml
@@ -15,7 +15,9 @@ name: 'Lighthouse-Badger-Easy'
 # INPUTS as environmental variables (env) for not manually triggered workflows 
 env:
   URLS: "https://sandbox-web.lazypay.in/" # URL(s) to be checked e.g. 'https://github.com/sitdisch https://github.com/mythemeway'
-  TOKEN_NAME: "LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN" # target token name; insert only the name never the real value e.g. 'LIGHTHOUSE_BADGER_TOKEN'
+  # TOKEN_NAME: "LIGHTHOUSE_BADGER_TOKEN"
+  TOKEN_NAME: "LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN"
+  # TOKEN_NAME: ${{ secrets.GITHUB_TOKEN }} # target token name; insert only the name never the real value e.g. 'LIGHTHOUSE_BADGER_TOKEN'
   # THAT'S IT; JUMP TO THE TRIGGERS;
   REPO_BRANCH: '${{ github.repository }} main' # target repo & branch
 
