--- a/.github/workflows/badger.yml
+++ b/.github/workflows/badger.yml
@@ -36,14 +36,14 @@ permissions:
   #   - cron: '55 23 * * 0' # e.g. every Sunday at 23:55
   # 
   # THAT'S IT; YOU'RE DONE;
-  workflow_dispatch:
-    inputs:
-      urls:
-        description: 'URL(s) to be checked'
-        required: true
-      token_name:
-        description: 'Target token name (NO VALUE!)'
-        required: true
+  # workflow_dispatch:
+  #   inputs:
+  #     urls:
+  #       description: 'URL(s) to be checked'
+  #       required: true
+  #     token_name:
+  #       description: 'Target token name (NO VALUE!)'
+  #       required: true
 
 ########################################################################
 # THAT'S IT; YOU DON'T HAVE TO DEFINE ANYTHING IN THE FOLLOWING
