--- a/.github/workflows/lighthouse-badger-easy.yml
+++ b/.github/workflows/lighthouse-badger-easy.yml
@@ -25,25 +25,20 @@ env:
 on:
   pull_request:
     types: [opened, reopened]
-    branches: [ main, feature/TCWEB-1382 ]
-permissions:
-  # All other permissions are set to none
-  checks: write
-  contents: read
-  pull-requests: write      
+    branches: [ main, feature/TCWEB-1382 ]     
   # page_build:
   # schedule: # Check your schedule here => https://crontab.guru/
   #   - cron: '55 23 * * 0' # e.g. every Sunday at 23:55
   # 
   # THAT'S IT; YOU'RE DONE;
-  # workflow_dispatch:
-  #   inputs:
-  #     urls:
-  #       description: 'URL(s) to be checked'
-  #       required: true
-  #     token_name:
-  #       description: 'Target token name (NO VALUE!)'
-  #       required: true
+  workflow_dispatch:
+    inputs:
+      urls:
+        description: 'URL(s) to be checked'
+        required: true
+      token_name:
+        description: 'Target token name (NO VALUE!)'
+        required: true
 
 ########################################################################
 # THAT'S IT; YOU DON'T HAVE TO DEFINE ANYTHING IN THE FOLLOWING
